   - Image output would fail to show the last line bar graph in list outputs
     if EstimateStyle was 0, BarColumnShowsRate was 1 and the last line had a
     higher traffic rate than other lines
   - Image output didn't correctly horizontally align the "no data available"
     message in 5 minute graph depending on the width of the image
 - New
   - Image output example cgi (examples/vnstat.cgi) automatically lists
     all monitored interfaces instead of requiring the list to be filled
     manually, server name in page title comes from hostname command
   - Image output example cgi (examples/vnstat.cgi) provides links for most
     available images to more detailed or longer versions of each image
   - Image output example cgi (examples/vnstat.cgi) allows direct interface
     specific page access with /interfacename suffix for the cgi if the
     used httpd supports PATH_INFO
   - Image output uses LibGD filled arc bug workaround only for LibGD
     versions that are known to be broken


2.7 / 16-May-2021

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter
     combinations (pull request by Severin Glöckner)
   - Columns in text hours graph output could get misaligned if the selected
     system locale used a UTF-8 sequence for the thousands separator instead
     of a single character
 - New
   - Add -5g / --fivegraph options to image output with sizing related
     parameters for the output of a 5 minute resolution bar graph
   - Add configuration option SummaryGraph and optional parameter for
     --hsummary and --vsummary for selecting which graph is shown next to
     the summary data in the horizontal and vertical summary image outputs
   - Add --large / --small options and configuration option LargeFonts for
     controlling the image output font size