@@ -73,6 +73,7 @@ vnstat \- a console-based network traffic monitor
 .RI [ limit ]]
 .RB [ \-\-years
 .RI [ limit ]]
+.RI [ interface ]
 
 .SH DESCRIPTION
 
