@@ -79,6 +79,7 @@ vnstati \- png image output support for vnStat
 .RI [ graph ]]
 .RB [ \-\-months
 .RI [ limit ]]
+.RI [ interface ]
 
 .SH DESCRIPTION
 
